Refactored Spring Security JWT code
Implemented using Symmetric Key Approach!